--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,13 +5,13 @@
  */
 
 :root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
-	--gray: 96, 115, 159;
-	--gray-light: 229, 233, 240;
-	--gray-dark: 34, 41, 57;
-	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
+	--accent: theme("colors.blue.500");
+	--accent-dark: theme("colors.blue.900");
+	--black: theme("colors.zinc.900");
+	--gray: theme("colors.zinc.500");
+	--gray-light: theme("colors.zinc.50");
+	--gray-dark: theme("colors.zinc.700");
+
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
@@ -32,10 +32,10 @@
 body {
 	font-family: 'Atkinson', sans-serif;
 	margin: 0;
+	min-height: 100vh;
 	padding: 0;
 	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
-	background-size: 100% 600px;
+	background-color: theme("colors.zinc.900");
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
@@ -43,7 +43,7 @@ body {
 	line-height: 1.7;
 }
 main {
-	width: 720px;
+	width: 960px;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
@@ -55,9 +55,12 @@ h4,
 h5,
 h6 {
 	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
+	color: var(--gray-light);
 	line-height: 1.2;
+	text-shadow: 0 0 30px var(--accent),
+				 0 0 40px var(--accent);
 }
+
 h1 {
 	font-size: 3.052em;
 }
@@ -83,7 +86,9 @@ a {
 a:hover {
 	color: var(--accent);
 }
+li,
 p {
+	color: var(--gray-light);
 	margin-bottom: 1em;
 }
 .prose p {
@@ -108,6 +113,7 @@ code {
 	padding: 2px 5px;
 	background-color: rgb(var(--gray-light));
 	border-radius: 2px;
+	color: var(--accent);
 }
 pre {
 	padding: 1.5em;
@@ -152,3 +158,21 @@ hr {
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
 }
+
+html {
+	scrollbar-face-color: #646464;
+	scrollbar-base-color: #646464;
+	scrollbar-3dlight-color: #646464;
+	scrollbar-highlight-color: #646464;
+	scrollbar-track-color: #000;
+	scrollbar-arrow-color: #000;
+	scrollbar-shadow-color: #646464;
+  }
+  
+  ::-webkit-scrollbar { width: 5px; height: 0px;}
+  ::-webkit-scrollbar-button {  background-color: var(--gray-dark); }
+  ::-webkit-scrollbar-track {  background-color: var(--gray-dark);}
+  ::-webkit-scrollbar-track-piece { background-color: theme("colors.zinc.800");}
+  ::-webkit-scrollbar-thumb { height: 10px; background-color: var(--gray-dark); border-radius: 3px;}
+  ::-webkit-scrollbar-corner { height:10px; background-color: var(--gray-dark);}
+  ::-webkit-resizer { background-color: var(--gray-dark);}
