--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import HeaderLink from "./HeaderLink.astro";
 const links = [
   {
     link: "uni",
-    label: "Uni-Courses",
+    label: "Uni",
   },
   {
     link: "projects",
@@ -19,7 +19,7 @@ const links = [
   },
   {
     link: "about",
-    label: "About Me",
+    label: "Me",
   },
 ];
 ---
