--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/BlogPost.astro";
   title="About Me"
   description="Lorem ipsum dolor sit amet"
   pubDate={new Date("August 08 2021")}
-  heroImage="/me.png"
+  heroImage="/me.jpg"
 >
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
