fix course layout

--- a/src/pages/uni/em/index.astro
+++ b/src/pages/uni/em/index.astro
@@ -2,4 +2,4 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="EM" />
+<Layout CourseName="Einführung in die Medieninformatik" CourseInitials="EM" />
