--- a/src/layouts/UniCourseLayout.astro
+++ b/src/layouts/UniCourseLayout.astro
@@ -2,14 +2,14 @@
 import BaseHead from "../components/BaseHead.astro";
 import BaseLayout from "./BaseLayout.astro";
 
-const { SITE_TITLE } = Astro.props;
+const { CourseName, CourseInitials } = Astro.props;
 ---
 
 <BaseLayout>
   <BaseHead
-    title={"Uni - " + SITE_TITLE}
-    description={"All of Material for the course " + SITE_TITLE}
+    title={"Uni - " + CourseInitials}
+    description={"All of Material for the course " + CourseName}
     slot="head"
   />
-  <h1 class="text-center">{SITE_TITLE}</h1>
+  <h1 class="text-center">{CourseName}</h1>
 </BaseLayout>
