--- a/src/pages/uni/df/index.astro
+++ b/src/pages/uni/df/index.astro
@@ -2,4 +2,4 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="DF" />
+<Layout CourseName="Digital Fabrication" CourseInitials="DF" />
