--- a/src/pages/uni/dmt/index.astro
+++ b/src/pages/uni/dmt/index.astro
@@ -2,4 +2,4 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="DMT" />
+<Layout CourseName="Digital Media Technologien" CourseInitials="DMT" />
