--- a/src/pages/uni/fit/index.astro
+++ b/src/pages/uni/fit/index.astro
@@ -2,4 +2,7 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="FIT" />
+<Layout
+  CourseName="Fortgeschrittene Interaktionstechnologien"
+  CourseInitials="FiT"
+/>
