--- a/src/pages/uni/pm/index.astro
+++ b/src/pages/uni/pm/index.astro
@@ -2,4 +2,4 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="PM" />
+<Layout CourseName="Projektmanagement" CourseInitials="PM" />
