--- a/src/pages/uni/we/index.astro
+++ b/src/pages/uni/we/index.astro
@@ -2,4 +2,4 @@
 import Layout from "../../../layouts/UniCourseLayout.astro";
 ---
 
-<Layout SITE_TITLE="WE" />
+<Layout CourseName="Webentwicklung" CourseInitials="WE" />
