--- a/src/layouts/AssignmentLayout.astro
+++ b/src/layouts/AssignmentLayout.astro
@@ -4,7 +4,7 @@ import BaseHead from "../components/BaseHead.astro";
 import FormattedDate from "../components/FormattedDate.astro";
 import BaseLayout from "./BaseLayout.astro";
 
-type Props = CollectionEntry<"blog">["data"];
+type Props = CollectionEntry<"assignment">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
