--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -5,7 +5,7 @@ import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const posts = (await getCollection("blog")).sort(
+const posts = (await getCollection("project")).sort(
   (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
@@ -18,7 +18,7 @@ const posts = (await getCollection("blog")).sort(
       {
         posts.map((post) => (
           <li>
-            <a href={`/blog/${post.slug}/`}>
+            <a href={`/project/${post.slug}/`}>
               <img width={720} height={360} src={post.data.heroImage} alt="" />
               <h4 class="title">{post.data.title}</h4>
               <p class="date">
