basic about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,65 +8,75 @@ import Layout from "../layouts/BlogPost.astro";
   pubDate={new Date("August 08 2021")}
   heroImage="/me.jpg"
 >
+  <h2>Personal Infomation</h2>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Vitae ultricies leo
-    integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis
-    egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In
-    hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat.
-    Netus et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu
-    non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim.
-    Habitasse platea dictumst quisque sagittis. Integer quis auctor elit sed
-    vulputate mi. Dictumst quisque sagittis purus sit amet.
+    My name is Till Wegener and im a Software Engineer from Germany. I love tech
+    and everything related to it. When im not busy working or studying i like to
+    play video games or work on my personal projects. I enjoy working with new
+    technologies and learning new things. You can read more about my finished
+    personal projects <a href="/project">here</a>. You can also find my thoughts
+    about tech and other projects im currently working on <a href="/blog"
+      >here</a
+    >.
   </p>
 
+  <h2>Education and Workhistory</h2>
   <p>
-    Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
-    rutrum quisque non tellus. Habitasse platea dictumst quisque sagittis purus
-    sit amet. Tellus molestie nunc non blandit massa. Cursus vitae congue mauris
-    rhoncus. Accumsan tortor posuere ac ut. Fringilla urna porttitor rhoncus
-    dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-    massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius
-    morbi enim nunc. Bibendum neque egestas congue quisque egestas diam. Cras
-    ornare arcu dui vivamus arcu felis bibendum. Dignissim suspendisse in est
-    ante in nibh mauris. Sed tempus urna et pharetra pharetra massa massa
-    ultricies mi.
+    I'm currently enrolled in a dual study program at the Rhine-Waal University
+    of Applied Sciences in Kamp-Lintfort. Besides studying i currently work for <a
+      href="https://www.mineralstech.com">Minerals Technologies</a
+    > in reasearch and development as a Software Engineer. As of October 2023 I
+    am currently working on my Bachelor's degree in the field of Computer
+    Science. In the years from 2020 to 2023 I finished my apprenticeship as an
+    software Developer for desktop applications at <a
+      href="https://www.hksinformatik.de/">HKS Informatik GMBH.</a
+    >
   </p>
-
+  <h2>Skills</h2>
   <p>
-    Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque.
-    Diam sit amet nisl suscipit. Lacus viverra vitae congue eu consequat ac
-    felis donec. Egestas integer eget aliquet nibh praesent tristique magna sit
-    amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa sed
-    elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-    dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra.
-    Posuere ac ut consequat semper viverra nam. Laoreet suspendisse interdum
-    consectetur libero id faucibus. Diam phasellus vestibulum lorem sed risus
-    ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-    facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed
-    risus pretium quam vulputate. Viverra suspendisse potenti nullam ac tortor
-    vitae purus faucibus ornare. Fringilla urna porttitor rhoncus dolor purus
-    non. Amet dictum sit amet justo donec enim.
-  </p>
+    Over the course of my work history and education i have been fortunate
+    enough to work with a wide variety of technologies. Throught this I
+    developed software for the following platforms and technologies:
 
-  <p>
-    Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac
-    ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut sem
-    viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in. Arcu
-    ac tortor dignissim convallis aenean et tortor at. Curabitur gravida arcu ac
-    tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-    pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim
-    sit amet. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam.
-    Id donec ultrices tincidunt arcu. Id cursus metus aliquam eleifend mi.
-  </p>
+    <h4>Desktop Apps</h4>
+    <ul>
+      <li>Delphi / Pascal</li>
+      <li>C++</li>
+      <li>Python</li>
+      <li>QT</li>
+      <li>Java</li>
+      <li>Rust</li>
+    </ul>
+    <h4>Game Development</h4>
+    <ul>
+      <li>Unity</li>
+      <li>Custom OpenGL Solutions</li>
+    </ul>
+    <h4>Mobile Apps</h4>
+    <ul>
+      <li>Flutter</li>
+    </ul>
+    <h4>Web Apps</h4>
+    <ul>
+      <li>Vanilla HTML/JS/CSS</li>
+      <li>Angular</li>
+      <li>React</li>
+    </ul>
+    <h4>Embedded development</h4>
+    <ul>
+      <li>Arduino</li>
+      <li>Raspberry Pi</li>
+    </ul>
 
-  <p>
-    Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus
-    imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu
-    cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-    Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit
-    libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed
-    pulvinar proin gravida. Egestas integer eget aliquet nibh praesent tristique
-    magna.
+    <h4>Non-Devlopment Skills</h4>
+    <p>
+      Due to my degree's focus on media informatics i also have a good
+      understanding of the following topics:
+    </p>
+    <ul>
+      <li>Human-Computer interactions</li>
+      <li>Usability Engineering</li>
+      <li>Graphic Design</li>
+    </ul>
   </p>
 </Layout>
